gitops/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: facial-detection-service
  labels:
    app: facial-detection-service
    app.kubernetes.io/component: facial-detection-service
    app.kubernetes.io/instance: facial-detection-service
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: facial-detection-service
  template:
    metadata:
      labels:
        deployment: facial-detection-service
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: facial-detection-service
          image: >-
            image-registry.openshift-image-registry.svc:5000/ooransa-dev/facial-detection-service:dev
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
