gitops/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: facial-detection-service
  labels:
    app: facial-detection-service
    app.kubernetes.io/component: facial-detection-service
    app.kubernetes.io/instance: facial-detection-service
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: facial-detection-service
