gitops/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: facial-detection-service
  labels:
    app: facial-detection-service
    app.kubernetes.io/component: facial-detection-service
    app.kubernetes.io/instance: facial-detection-service
spec:
  to:
    kind: Service
    name: facial-detection-service
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
